src/objects/C_object__c.object
<CustomObject>
    <fields>
        <fullName>A_object__c</fullName>
        <description>This is relationship with with C</description>
        <label>A object</label>
        <referenceTo>A_object__c</referenceTo>
        <relationshipLabel>C_objects</relationshipLabel>
        <relationshipName>C_objects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>B_object__c</fullName>
        <description>This is relationship field with B</description>
        <label>B object</label>
        <referenceTo>B_object__c</referenceTo>
        <relationshipLabel>C_objects</relationshipLabel>
        <relationshipName>C_objects</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rollno__c</fullName>
        <label>Rollno</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>C object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>C no.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>C_objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>